# video_from_rosbag

./: CMakeLists.txt  package.xml  setup.py
launch/: video_from_rosbag.launch
nodes/: convert_to_mp4.py  video_from_rosbag.py
src/video_from_rosbag/: gui.py
