<?xml version="1.0"?>
<package format="2">
  <name>video_from_rosbag</name>
  <version>0.0.0</version>
  <description>The video_from_rosbag package</description>

  <maintainer email="r.hochdahl@gmail.com">René Hochdahl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>

</package>